# dfa_learning

./: .PS.py.swp  .RL.py.swp  .SGD2.py.swo  .SGD2.py.swp  .gitignore  DFATest.py  MOI_wrapper.jl  PS.py  RL.py  SG2.py  SGD.py  SGD2.py  SGD3.py  abbadingo.jl  data.txt  data2.txt  dfa_alternating_nlp.jl  dfa_completion.jl  dfa_cp.py  dfa_exp.cpp  dfa_graph_coloring.jl  dfa_hc.jl  dfa_ilp.jl  dfa_pytorch.py  dfa_pytorch2.py  dfa_sa.jl  dfa_sat.py  dfa_sdp.jl  dfa_search.cpp  dfa_search2.cpp  dfa_smt.py  dfa_spectral.jl  hankel.py  hankel_substring.py  hopcroft.jl  ls.txt  meta_sat.py  pb.jl  pyproject.toml  util.jl  (+1 more)
dcts/: adfa.dct  dfa.dct  dfa2.dct  dfa_10_try_6.dct  dfa_11_try_4.dct  dfa_12_try_5.dct  dfa_12_try_6.dct  dfa_12_try_7.dct  dfa_12_try_8.dct  dfa_17_try_1.dct  dfa_20_try_1.dct  dfa_3_try_1.dct  dfa_3_try_2.dct  dfa_3_try_3.dct  dfa_3_try_4.dct  dfa_3_try_5.dct  dfa_4_try_1.dct  dfa_4_try_2.dct  dfa_4_try_3.dct  dfa_4_try_4.dct  dfa_4_try_5.dct  dfa_5_try_1.dct  dfa_5_try_2.dct  dfa_5_try_3.dct  dfa_5_try_4.dct  dfa_5_try_5.dct  dfa_6_try_1.dct  dfa_6_try_2.dct  dfa_6_try_3.dct  dfa_6_try_4.dct  dfa_6_try_5.dct  dfa_7_try_1.dct  dfa_7_try_2.dct  dfa_7_try_3.dct  dfa_7_try_4.dct  dfa_7_try_5.dct  dfa_8_try_1.dct  dfa_8_try_2.dct  dfa_8_try_3.dct  dfa_8_try_4.dct  (+5 more)
